--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.12.0"
+    "react-router-dom": "^6.12.0",
+    "react-snap-carousel": "^0.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
